add: implement function to select entire row in all tables

--- a/src/i18n/de.json
+++ b/src/i18n/de.json
@@ -1,4 +1,5 @@
 {
     "btnSetFocus": "Fokus auf A1 setzen",
+    "btnSelectLine": "Zeile auf allen Blättern auswählen",
     "msgOfficeInit": "Office wird initialisiert..."
 }
